--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,14 +10,53 @@
   height: 100vh;
   display: flex;
   justify-content: space-between;
-  .option { 
-    width: 49%; 
+  .option, .option-text{ 
+    width: 49%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 70px;
+    text-align: center;
+    line-height: 400px;
+    font-weight: bold;
+    transition: 1s;
+  }
+  .option:hover {
+    opacity: 0.3;
+    transition: 0.8s;
+    cursor: pointer;
   }
   .option:nth-child(1) {
     background: url('../images/newyork.jpg');
   }
   .option:nth-child(2) {
     background: url('../images/borabora.jpg');
-  }
+  }  
 }
+.pageOption:nth-child(2) {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.logo{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 400px;
+  height: 200px;
+  background-image: url('../images/fotodawid_logo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+#romb {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%) rotate(45deg);
+  width: 350px;
+  height: 350px;
+  background: white;
+}
+
 
