--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   padding: 0;
   font-family: 'Lato', sans-serif;
 }
-.backColor {
+.back-color {
   background-color: white;
   transform: translateY(-70px);
 }
@@ -66,8 +66,7 @@
   height: 350px;
   background: white;
 }
-.bannerAndNav {
-  width: 100vw;
+.banner-container {
   height: 100vh;
 }
 .banner {
@@ -92,10 +91,12 @@
   background-size: contain;
 }
 #logo {
-  position: absolute;
-  top: 70px;
-  width: 400px;
-  height: 200px;
+  position: relative;
+  top: 10px;
+  left: 10px;
+  width: 120px;
+  height: 60px;
+  transform: translateX(-50px);
   background-image: url('./images/fotodawid_logo.png');
   background-repeat: no-repeat;
   background-size: contain;
@@ -103,6 +104,7 @@
 nav {
   display: flex;
   justify-content: center;
+  border-bottom: 1px solid brown;
 }
 nav ul {
   display: flex;
@@ -124,20 +126,21 @@ nav a {
 nav a:hover {
   color: black;
 }
-.aboutUs {
+
+.about-us {
   text-align: justify;
 }
-.aboutUs H1 {
+.about-us H1 {
   font-size: 42px;
   padding-top: 40px;
   text-align: center;
 }
-.aboutUs p {
+.about-us p {
   font-size: 24px;
   padding-top: 20px;
   line-height: 30px;
 }
-/* .aboutUs img {
+/* .about-us img {
   width: 200px;
   height: 100px;
 } */
@@ -149,13 +152,24 @@ nav a:hover {
 .photo-gallery {
   padding: 50px 0;
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+}
+.photo-box {
+  min-width: 250px;
+  height: 350px;
+  flex: 1;
+  overflow: hidden;
 }
 .photos {
+  width: 100%;
+  height: 100%;
   background-size: cover;
-  width: 250px;
-  height: 150px;
   cursor: pointer;
+  transition: 0.5s;
+}
+.photos:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 .photo1 {
   background-image: url("./images/studio4.jpg");
@@ -166,8 +180,14 @@ nav a:hover {
 .photo3 {
   background-image: url("./images/studio6.jpg");
 }
-.photo4 {
-  background-image: url("./images/studio7.jpg");
+.kids1 {
+  background-image: url("./images/kids1.jpg");
+}
+.kids2 {
+  background-image: url("./images/kids2.jpg");
+}
+.kids3 {
+  background-image: url("./images/kids3.jpg");
 }
 .showMe {
   position: absolute;
@@ -198,4 +218,17 @@ nav a:hover {
 }
 .exitButton:hover {
   background-color:rgba(255, 179, 179, 0.3);
+}
+.belt-nav {
+  transform: translateY(-70px);
+  background-color: white;
+}
+.belt-nav-top {
+  position: fixed; 
+  top: 0;
+  left: 0; 
+  z-index: 100; 
+  width: 100vw;
+  transform: translateY(0);
+
 }
