--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
   margin: 0 auto;
 }
 .page-option {
-  width: 100vw; 
   height: 100vh;
   display: flex;
   justify-content: space-between;
@@ -38,13 +37,40 @@
   background-image: url('./images/studio.jpg');
   background-size: cover;          
   background-repeat: no-repeat;
-  background-position: center center;   
+  background-position: center center; 
 }
 .option:nth-child(2) {
   background-image: url('./images/kids.jpg');
   background-size: cover;          
   background-repeat: no-repeat;
   background-position: center center;
+}
+.h1-photo {
+  position: absolute;
+  top: 10vh;
+  font-size: 70px;
+  line-height: 40vh;
+  z-index: -5;
+  text-align: center;
+  letter-spacing: 10px;
+  font-weight: bold;
+  transition: 1s;
+}
+.h1-photo:nth-child(1) {
+  left: 20vh;
+}
+.h1-photo:nth-child(2) {
+  right: 15vh;
+}
+@media screen and (max-width: 1400px){
+  .h1-photo {
+    font-size: 48px;
+  }
+}
+@media screen and (max-width: 1200px){
+  .h1-photo {
+    font-size: 36px;
+  }
 }
 .option span {
   display: inline-block;
@@ -66,6 +92,18 @@
   height: 350px;
   background: white;
 }
+@media screen and (max-width: 1400px){
+  #romb {
+    width: 250px;
+    height: 250px;
+  }
+}
+@media screen and (max-width: 1200px){
+  #romb {
+    width: 200px;
+    height: 200px;
+  }
+}
 .banner-container {
   height: 100vh;
 }
@@ -75,9 +113,17 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+  z-index: -5;
+}
+.banner-woman {
+  background: url('./images/woman.jpg') no-repeat;
+  background-size: cover;
+  background-position-y: center;
+}
+.banner-kindergarten {
   background: url('./images/kindergarten.jpg') no-repeat;
   background-size: cover;
-  z-index: -5;
+  background-position-y: center;
 }
 #logo-home{
   position: absolute;
@@ -90,13 +136,25 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
+@media screen and (max-width: 1400px){
+  #logo-home {
+    width: 300px;
+    height: 150px;
+  }
+}
+@media screen and (max-width: 1200px){
+  #logo-home {
+    width: 220px;
+    height: 110px;
+  }
+}
 #logo {
   position: relative;
   top: 10px;
   left: 10px;
   width: 120px;
   height: 60px;
-  transform: translateX(-50px);
+  transform: translateX(-30px);
   background-image: url('./images/fotodawid_logo.png');
   background-repeat: no-repeat;
   background-size: contain;
@@ -117,6 +175,9 @@ nav li {
   text-align: center;
   margin: 2%;
   padding: 5px;
+}
+nav li:nth-child(4) {
+  width: 340px;
 }
 nav a {
   text-decoration: none;
