--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,19 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Caveat', cursive;
+  /* font-family: 'Lato', sans-serif; */
 }
 .back-color {
   background-color: white;
   transform: translateY(-70px);
 }
 .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 .page-option {
   height: 100vh;
@@ -52,7 +56,8 @@
   line-height: 40vh;
   z-index: -5;
   text-align: center;
-  letter-spacing: 10px;
+  letter-spacing: 15px;
+  text-transform: uppercase;
   font-weight: bold;
   transition: 1s;
 }
@@ -154,7 +159,6 @@
   left: 10px;
   width: 120px;
   height: 60px;
-  transform: translateX(-30px);
   background-image: url('./images/fotodawid_logo.png');
   background-repeat: no-repeat;
   background-size: contain;
@@ -170,41 +174,79 @@ nav ul {
   
 }
 nav li {
-  width: 150px;
   list-style-type: none;
   text-align: center;
-  margin: 2%;
-  padding: 5px;
+  margin: 15px 0 10px 0;
+  padding: 5px 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-nav li:nth-child(4) {
-  width: 340px;
+nav li:first-child {
+  margin-left: 20px;
 }
 nav a {
+
   text-decoration: none;
   color: brown;
-  font-size: 24px;
+  font-size: 28px;
 }
 nav a:hover {
   color: black;
 }
+@media screen and (max-width: 1200px){
+  #logo {
+    transform: translateY(-5px);
+  }
+  nav a {
+    font-size: 22px;
+  }
+}
+@media screen and (max-width: 900px){
+  nav a {
+    font-size: 16px;
+  }
+}
 
-.about-us {
+#about-us-studio, #about-us-kindergarten {
   text-align: justify;
 }
-.about-us H1 {
+#about-us-studio h1, #about-us-kindergarten h1 {
+  text-transform: uppercase;
+  letter-spacing: 18px;
   font-size: 42px;
-  padding-top: 40px;
+  padding-top: 90px;
+  padding-bottom: 40px;
   text-align: center;
 }
-.about-us p {
-  font-size: 24px;
-  padding-top: 20px;
-  line-height: 30px;
+#about-us-studio h2, #about-us-kindergarten h2 {
+  letter-spacing: 3px;
+  font-size: 28px;
+  text-align: center;
+  padding-bottom: 40px;
 }
-/* .about-us img {
-  width: 200px;
-  height: 100px;
-} */
+#about-us-studio h3, #about-us-kindergarten h3 {
+  letter-spacing: 4px;
+  font-size: 35px;
+  text-align: center;
+  padding-bottom: 40px;
+}
+#about-us-studio p, #about-us-kindergarten p {
+  font-size: 28px;
+  padding-top: 20px;
+}
+@media screen and (max-width: 1200px) {
+  #about-us-studio p, #about-us-kindergarten p {
+    margin: auto 10px;
+    font-size: 24px;
+    padding-top: 16px;
+  }
+  #about-us-studio h1, #about-us-kindergarten h1 {
+    font-size: 28px;
+    padding-top: 60px;
+    text-align: center;
+  }
+}
 .test {
   border: 2px solid red;
   width: 100vw;
@@ -213,7 +255,6 @@ nav a:hover {
 .photo-gallery {
   padding: 50px 0;
   display: flex;
-  /* justify-content: space-around; */
 }
 .photo-box {
   min-width: 250px;
@@ -232,6 +273,11 @@ nav a:hover {
   transform: scale(1.1);
   transition: 0.5s;
 }
+.kids {
+  background-size: cover;
+  width: 50vw;
+  height: 800px
+}
 .photo1 {
   background-image: url("./images/studio4.jpg");
 }
@@ -241,6 +287,12 @@ nav a:hover {
 .photo3 {
   background-image: url("./images/studio6.jpg");
 }
+.kids00 {
+  background-image: url("./images/kids00.jpg");
+}
+.kids01 {
+  background-image: url("./images/kids01.jpg");
+}
 .kids1 {
   background-image: url("./images/kids1.jpg");
 }
@@ -249,6 +301,19 @@ nav a:hover {
 }
 .kids3 {
   background-image: url("./images/kids3.jpg");
+}
+.panorama {
+  background-image: url("./images/panorama.jpg");
+  height: 350px;
+  background-size: cover;
+}
+@media screen and (max-width: 900px) {
+  .photo-studio .photo-box:nth-child(1) {
+    display: none !important
+  }
+  .photo-kids .photo-box:nth-child(1) {
+    display: none !important
+  }
 }
 .showMe {
   position: absolute;
@@ -291,5 +356,8 @@ nav a:hover {
   z-index: 100; 
   width: 100vw;
   transform: translateY(0);
-
+}
+footer {
+  padding: 10px 0;
+  text-align: center;
 }
