--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Caveat', cursive;
-  /* font-family: 'Lato', sans-serif; */
+  font-family: 'Caveat', cursive;  
+}
+p, footer {
+  font-family: 'Josefin Sans', sans-serif;
+  text-align: center;
 }
 .back-color {
   background-color: white;
@@ -50,9 +53,11 @@
   background-position: center center;
 }
 .h1-photo {
+  width: 50%;
+  height: 100vh;
   position: absolute;
-  top: 10vh;
-  font-size: 70px;
+  top: 0;
+  font-size: 48px;
   line-height: 40vh;
   z-index: -5;
   text-align: center;
@@ -60,21 +65,24 @@
   text-transform: uppercase;
   font-weight: bold;
   transition: 1s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .h1-photo:nth-child(1) {
-  left: 20vh;
+  left: 0;
 }
 .h1-photo:nth-child(2) {
-  right: 15vh;
+  right: 0;
 }
 @media screen and (max-width: 1400px){
   .h1-photo {
-    font-size: 48px;
+    font-size: 28px;
   }
 }
 @media screen and (max-width: 1200px){
   .h1-photo {
-    font-size: 36px;
+    font-size: 24px;
   }
 }
 .option span {
@@ -124,11 +132,15 @@
   background: url('./images/woman.jpg') no-repeat;
   background-size: cover;
   background-position-y: center;
+  background-position-x: center;
+
 }
 .banner-kindergarten {
   background: url('./images/kindergarten.jpg') no-repeat;
   background-size: cover;
   background-position-y: center;
+  background-position-x: center;
+
 }
 #logo-home{
   position: absolute;
@@ -215,15 +227,14 @@ nav a:hover {
   text-transform: uppercase;
   letter-spacing: 18px;
   font-size: 42px;
-  padding-top: 90px;
-  padding-bottom: 40px;
+  padding: 80px;
   text-align: center;
 }
 #about-us-studio h2, #about-us-kindergarten h2 {
   letter-spacing: 3px;
   font-size: 28px;
   text-align: center;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
 #about-us-studio h3, #about-us-kindergarten h3 {
   letter-spacing: 4px;
@@ -233,7 +244,8 @@ nav a:hover {
 }
 #about-us-studio p, #about-us-kindergarten p {
   font-size: 28px;
-  padding-top: 20px;
+  line-height: 35px;
+  padding: 50px 10px;
 }
 @media screen and (max-width: 1200px) {
   #about-us-studio p, #about-us-kindergarten p {
@@ -253,7 +265,7 @@ nav a:hover {
   height: 150px;
 }
 .photo-gallery {
-  padding: 50px 0;
+  /* padding: 50px 0; */
   display: flex;
 }
 .photo-box {
@@ -275,8 +287,21 @@ nav a:hover {
 }
 .kids {
   background-size: cover;
+  background-position: center;
   width: 50vw;
-  height: 800px
+  height: 80vh;
+}
+.women {
+  background-size: cover;
+  background-position: center;
+  width: 50vw;
+  height: 50vh;
+}
+.women-height {
+  background-size: cover;
+  background-position: center;
+  width: 50vw;
+  height: 100vh;
 }
 .photo1 {
   background-image: url("./images/studio4.jpg");
@@ -286,6 +311,18 @@ nav a:hover {
 }
 .photo3 {
   background-image: url("./images/studio6.jpg");
+}
+.photo11 {
+  background-image: url("./images/studio11.jpg");
+}
+.photo12 {
+  background-image: url("./images/studio12.jpg");
+}
+.photo13 {
+  background-image: url("./images/studio13.jpg");
+}
+.photo14 {
+  background-image: url("./images/studio14.jpg");
 }
 .kids00 {
   background-image: url("./images/kids00.jpg");
@@ -302,16 +339,41 @@ nav a:hover {
 .kids3 {
   background-image: url("./images/kids3.jpg");
 }
+.kids04 {
+  background-image: url("./images/kids4.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  height: 70vh;
+}
+.studio08 {
+  background-image: url("./images/studio8.jpg");
+}
+.studio07 {
+  background-image: url("./images/studio7.jpg");
+}
+.studio09 {
+  background-image: url("./images/studio9.jpg");
+}
+.studio03 {
+  background-image: url("./images/studio3.jpg");
+}
 .panorama {
   background-image: url("./images/panorama.jpg");
   height: 350px;
   background-size: cover;
+  background-position-x: center;
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1200px) {
   .photo-studio .photo-box:nth-child(1) {
     display: none !important
   }
   .photo-kids .photo-box:nth-child(1) {
+    display: none !important
+  }
+}
+@media screen and (max-width: 1000px) {
+  .photo-studio .photo-box:last-child {
     display: none !important
   }
 }
@@ -358,6 +420,5 @@ nav a:hover {
   transform: translateY(0);
 }
 footer {
-  padding: 10px 0;
-  text-align: center;
+  padding: 20px 0;
 }
