--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,6 @@ p, footer {
   display: flex;
   justify-content: space-between;
 }
-
 .option, .option-text{ 
   width: 49%;
   display: flex;
@@ -53,19 +52,6 @@ p, footer {
   background-repeat: no-repeat;
   background-position: center center;
 }
-@media screen and (max-width: 600px) {
-  .option {
-    width: auto;
-    height: 49vh;
-  }
- .option:nth-child(1) {
-    background-image: url('./images/bannerStudioSmall.jpg');
-    background-position-x: left;
-  } 
-  .option:nth-child(2) {
-    background-image: url('./images/bannerKindergartenSmall.jpg');
- } 
-}
 .h1-photo {
   width: 50%;
   height: 100vh;
@@ -89,42 +75,6 @@ p, footer {
 .h1-photo:nth-child(2) {
   right: 0;
 }
-@media screen and (max-width: 1400px){
-  .h1-photo {
-    font-size: 28px;
-  }
-}
-@media screen and (max-width: 1200px){
-  .h1-photo {
-    font-size: 24px;
-  }
-}
-@media screen and (max-width: 600px) {
-  .page-option {
-    flex-direction: column;
-  }
-  .h1-photo {
-    font-size: 10px;
-    letter-spacing: 5px;
-    line-height: 20px;
-    padding: 0 5px;
-    width: auto;
-    height: 10vh;
-    z-index: 5;
-  }
-  .h1-photo:nth-child(1) {
-    left: auto;
-    right: 0;
-    justify-content: flex-end;
-    top: 5vh;
-    color: white;
-  }
-  .h1-photo:nth-child(2) {
-    right: auto;
-    left: 0;
-    top: 85vh;
-  }
-}
 .option span {
   display: inline-block;
   opacity: 0;
@@ -145,25 +95,6 @@ p, footer {
   height: 350px;
   background: white;
 }
-@media screen and (max-width: 1400px){
-  #romb {
-    width: 250px;
-    height: 250px;
-  }
-}
-@media screen and (max-width: 1200px){
-  #romb {
-    width: 200px;
-    height: 200px;
-  }
-}
-@media screen and (max-width: 600px) {
-  #romb {
-    width: 160px;
-    height: 160px;
-    border-radius: 100% 50%;
-  }
-}
 .banner-container {
   height: 100vh;
 }
@@ -180,14 +111,12 @@ p, footer {
   background-size: cover;
   background-position-y: center;
   background-position-x: center;
-
 }
 .banner-kindergarten {
   background: url('./images/kindergarten.jpg') no-repeat;
   background-size: cover;
   background-position-y: center;
   background-position-x: center;
-
 }
 #logo-home{
   position: absolute;
@@ -200,23 +129,16 @@ p, footer {
   background-repeat: no-repeat;
   background-size: contain;
 }
-@media screen and (max-width: 1400px){
-  #logo-home {
-    width: 300px;
-    height: 150px;
-  }
-}
-@media screen and (max-width: 1200px){
-  #logo-home {
-    width: 220px;
-    height: 110px;
-  }
-}
-@media screen and (max-width: 600px){
-  #logo-home {
-    width: 180px;
-    height: 90px;
-  }
+#logo-portrait {
+  display: none;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 100px;
+  height: 50px;
+  background-image: url('./images/fotodawid_logo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 #logo {
   position: relative;
@@ -236,7 +158,6 @@ nav {
 nav ul {
   display: flex;
   flex-direction: row;
-  
 }
 nav li {
   list-style-type: none;
@@ -259,20 +180,6 @@ nav a {
 nav a:hover {
   color: black;
 }
-@media screen and (max-width: 1200px){
-  #logo {
-    transform: translateY(-5px);
-  }
-  nav a {
-    font-size: 22px;
-  }
-}
-@media screen and (max-width: 900px){
-  nav a {
-    font-size: 16px;
-  }
-}
-
 #about-us-studio, #about-us-kindergarten {
   text-align: justify;
 }
@@ -283,7 +190,6 @@ nav a:hover {
   padding: 80px;
   text-align: center;
 }
-
 #about-us-studio h2, #about-us-kindergarten h2 {
   letter-spacing: 3px;
   font-size: 28px;
@@ -300,18 +206,6 @@ nav a:hover {
   font-size: 28px;
   line-height: 35px;
   padding: 20px 10px;
-}
-@media screen and (max-width: 1200px) {
-  #about-us-studio p, #about-us-kindergarten p {
-    margin: auto 10px;
-    font-size: 24px;
-    padding-top: 16px;
-  }
-  #about-us-studio h1, #about-us-kindergarten h1 {
-    font-size: 28px;
-    padding-top: 60px;
-    text-align: center;
-  }
 }
 .test {
   border: 2px solid red;
@@ -425,24 +319,8 @@ nav a:hover {
   background-size: cover;
   background-position-x: center;
 }
-@media screen and (max-width: 1200px) {
-  .photo-studio .photo-box:nth-child(1) {
-    display: none !important
-  }
-  .photo-kids .photo-box:nth-child(1) {
-    display: none !important
-  }
-}
-@media screen and (max-width: 1000px) {
-  .photo-studio .photo-box:last-child {
-    display: none !important
-  }
-}
 .showMe {
   position: absolute;
-  /* top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%); */
   width: 1200px;
   height: 900px;
   display: flex;
@@ -480,6 +358,249 @@ nav a:hover {
   width: 100vw;
   transform: translateY(0);
 }
+.hamburger-container {
+  display: none;
+  width: 38px;
+  height: 32px;
+  background-color: rgba(255,255,255,0);
+}
+.hamburger {
+  width: 30px;
+  height: 0;
+  border: 4px solid red;
+  margin-bottom: 5px;
+}
 footer {
   padding: 20px 0;
 }
+@media screen and (max-width: 1400px){
+  .h1-photo {
+    font-size: 28px;
+  }
+  #romb {
+    width: 250px;
+    height: 250px;
+  }
+  #logo-home {
+    width: 300px;
+    height: 150px;
+  }
+}
+@media screen and (max-width: 1200px){
+  .h1-photo {
+    font-size: 24px;
+  }
+  #romb {
+    width: 200px;
+    height: 200px;
+  }
+  #logo-home {
+    width: 220px;
+    height: 110px;
+  }
+  #logo {
+    transform: translateY(-5px);
+  }
+  nav a {
+    font-size: 22px;
+  }
+  #about-us-studio p, #about-us-kindergarten p {
+    margin: auto 10px;
+    font-size: 24px;
+    padding-top: 16px;
+  }
+  #about-us-studio h1, #about-us-kindergarten h1 {
+    font-size: 28px;
+    padding-top: 60px;
+    text-align: center;
+  }
+  .photo-studio .photo-box:nth-child(1) {
+    display: none !important
+  }
+  .photo-kids .photo-box:nth-child(1) {
+    display: none !important
+  }
+}
+@media screen and (max-width: 1000px) {
+  .photo-studio .photo-box:last-child {
+    display: none !important
+  }
+}
+@media screen and (max-width: 900px){
+  #romb {
+    width: 150px;
+    height: 150px;
+  }
+  #logo-home {
+    width: 180px;
+    height: 90px;
+  }
+  nav a {
+    font-size: 16px;
+  }
+  .h1-photo {
+    font-size: 10px;
+    letter-spacing: 5px;
+    line-height: 20px;
+    padding: 0 5px;
+    height: 10vh;
+    z-index: 5;
+  }
+  .h1-photo:nth-child(1) {
+    top: 85vh;
+    color: white;
+  }
+  .h1-photo:nth-child(2) {
+    top: 5vh;
+  }
+}
+@media screen and (orientation: portrait) {
+  #romb {
+    border-radius: 100% 50%;
+  }
+  .banner-woman {
+    background: url('./images/bannerStudioLargePortrait.jpg') no-repeat;
+      background-size: cover;
+      background-position-y: center;
+      background-position-x: center;
+  }
+  .banner-kindergarten {
+    background: url('./images/bannerKindergartenLargePortrait.jpg') no-repeat;
+      background-size: cover;
+      background-position-y: center;
+      background-position-x: center;
+  }
+  .belt-nav {
+    position: absolute;
+    top: 100px;
+    right: 30px;
+    background-color: rgba(255,255,255,0);
+  }
+  .belt-nav ul {
+    display: none;
+  }
+  #logo {
+    display: none;    
+  }
+  .hamburger-container {
+    display: block;
+  }
+  #logo-portrait {
+    display: block;
+  }
+}
+@media screen and (max-width: 1200px) and (orientation: portrait) {
+  .option {
+    width: 100vw;
+    height: 49vh;
+  }
+ .option:nth-child(1) {
+    background-image: url('./images/homeStudioLarge.jpg');
+    background-position-x: left;
+  } 
+  .option:nth-child(2) {
+    background-image: url('./images/homeKindergartenLarge.jpg');
+  }
+  .page-option {
+    flex-direction: column;
+  }
+  .h1-photo {
+    font-size: 20px;
+    letter-spacing: 5px;
+    line-height: 40px;
+    padding: 0 25px;
+    width: auto;
+    height: 10vh;
+    z-index: 5;
+  }
+  .h1-photo:nth-child(1) {
+    left: auto;
+    right: 0;
+    justify-content: flex-end;
+    top: 5vh;
+    color: white;
+  }
+  .h1-photo:nth-child(2) {
+    right: auto;
+    left: 0;
+    top: 85vh;
+  }
+  #romb {
+    width: 260px;
+    height: 260px;
+  }
+  #logo-home {
+    width: 300px;
+    height: 150px;
+  }
+
+}
+@media screen and (max-width: 1200px) and (orientation: portrait) {
+  .banner-woman {
+    background: url('./images/bannerStudioMediumPortrait.jpg') no-repeat;
+      background-size: cover;
+      background-position-y: center;
+      background-position-x: center;
+  }
+  .banner-kindergarten {
+    background: url('./images/bannerKindergartenMediumPortrait.jpg') no-repeat;
+      background-size: cover;
+      background-position-y: center;
+      background-position-x: center;
+  }
+}
+@media screen and (max-width: 600px) and (orientation: portrait) {
+ .option:nth-child(1) {
+    background-image: url('./images/homeStudioSmall.jpg');
+    background-position-x: left;
+  } 
+  .option:nth-child(2) {
+    background-image: url('./images/homeKindergartenSmall.jpg');
+  }
+  .page-option {
+    flex-direction: column;
+  }
+  .h1-photo {
+    font-size: 10px;
+    letter-spacing: 5px;
+    line-height: 20px;
+    padding: 0 5px;
+    width: auto;
+    height: 10vh;
+    z-index: 5;
+  }
+  .h1-photo:nth-child(1) {
+    left: auto;
+    right: 0;
+    justify-content: flex-end;
+    top: 5vh;
+    color: white;
+  }
+  .h1-photo:nth-child(2) {
+    right: auto;
+    left: 0;
+    top: 85vh;
+  }
+  #romb {
+    width: 160px;
+    height: 160px;
+  }
+  portrait {
+    width: 180px;
+    height: 90px;
+  }
+  .banner-woman {
+    background: url('./images/bannerStudioSmallPortrait.jpg') no-repeat;
+      background-size: cover;
+      background-position-y: center;
+      background-position-x: center;
+  }
+  .banner-kindergarten {
+    background: url('./images/bannerKindergartenSmallPortrait.jpg') no-repeat;
+      background-size: cover;
+      background-position-y: center;
+      background-position-x: center;
+  }
+}
+
+
