--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@ p, h1, footer {
   font-family: 'Josefin Sans', sans-serif;
   text-align: center;
 }
+.lorem {
+  padding: 10px;
+  font-size: 40px;
+}
+.loremH1 {
+  padding: 90px 0 49px 0;
+}
 .back-color {
   background-color: white;
   transform: translateY(-70px);
