--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+}
+body, html {
   font-family: 'Caveat', cursive;  
 }
 p, h1, footer {
@@ -9,7 +11,7 @@ p, h1, footer {
 }
 .lorem {
   padding: 10px;
-  font-size: 40px;
+  font-size: 20px;
 }
 .loremH1 {
   padding: 90px 0 49px 0;
@@ -36,7 +38,7 @@ p, h1, footer {
   justify-content: center;
   align-items: center;
   font-size: 70px;
-  letter-spacing: 10px;
+  /* letter-spacing: 10px; */
   text-align: center;
   /* line-height: 400px; */
   font-weight: bold;
@@ -143,13 +145,14 @@ p, h1, footer {
 #logo-portrait {
   display: none;
   position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 100px;
+  top: 0;
+  left: 0;
+  width: 100vw;
   height: 50px;
   background-image: url('./images/fotodawid_logo.png');
   background-repeat: no-repeat;
   background-size: contain;
+  background-color: rgba(255,255,255,0.9);
 }
 
 #logo {
@@ -192,7 +195,7 @@ nav a:hover {
   color: black;
 }
 .nav-mobile {
-  display: none;
+  /* display: none; */
   position: fixed;
   top: 0;
   right: 0;
@@ -221,13 +224,13 @@ nav a:hover {
   text-align: center;
 }
 #about-us-studio h2, #about-us-kindergarten h2 {
-  letter-spacing: 3px;
+  /* letter-spacing: 3px; */
   font-size: 28px;
   text-align: center;
   padding-bottom: 60px;
 }
 #about-us-studio h3, #about-us-kindergarten h3 {
-  letter-spacing: 4px;
+  /* letter-spacing: 4px; */
   font-size: 35px;
   text-align: center;
   padding-bottom: 40px;
@@ -237,11 +240,11 @@ nav a:hover {
   line-height: 35px;
   padding: 20px 10px;
 }
-.test {
+/* .test {
   border: 2px solid red;
   width: 100vw;
   height: 150px;
-}
+} */
 .photo-gallery {
   padding-bottom: 20px;
   display: flex;
@@ -382,7 +385,6 @@ nav a:hover {
   height: 880px;
   background-size: cover;
   border-radius: 5px;
-  border: 2px solid #db4d50;
 }
 .exitButton {
   width: 150px;
@@ -403,6 +405,7 @@ nav a:hover {
   display: flex;
   flex-direction: row;
   align-items: center;
+  height: 70px;
 }
 .belt-nav-top {
   position: fixed; 
@@ -465,11 +468,11 @@ nav a:hover {
 }
 .hamburger-container {
   position: fixed;
-  top: 20px;
+  top: 15px;
   right: 20px;
   display: none;
   background-color: rgba(255,255,255,0);
-  z-index: 111;
+  z-index: 112;
 }
 .hamburger {
   width: 30px;
@@ -503,7 +506,7 @@ footer {
 }
 @media screen and (max-width: 1200px){
   .h1-photo h1 {
-    font-size: 24px;
+    font-size: 48px;
   }
   #romb {
     width: 200px;
@@ -543,6 +546,9 @@ footer {
   .photo-studio .photo-box:last-child {
     display: none !important
   }
+  .photo-kids .photo-box:last-child {
+    display: none !important
+  }
 }
 @media screen and (max-width: 900px){
   #romb {
@@ -557,8 +563,7 @@ footer {
     font-size: 16px;
   }
   .h1-photo h1 {
-    font-size: 10px;
-    letter-spacing: 5px;
+    font-size: 36px;
     padding: 0 5px;
     z-index: 5;
   }
@@ -574,7 +579,6 @@ footer {
   .option span {
     width: 100vw;
     height: 50vh;
-    border: 2px solid red;
   }
   .banner-woman {
     background: url('./images/bannerStudioLargePortrait.jpg') no-repeat;
@@ -615,19 +619,18 @@ footer {
     display: block;
     position: fixed;
     z-index: 111;
-    width: 150px;
+    /* width: 150px; */
     height: 75px;
   }
   .show-second {
     display: none;  
   }
 
-
 }
 @media screen and (max-width: 1200px) and (orientation: portrait) {
   .option {
     width: 100vw;
-    height: 49vh;
+    height: 49%;
   }
  .option:nth-child(1) {
     background-image: url('./images/homeStudioLarge.jpg');
@@ -640,10 +643,9 @@ footer {
     flex-direction: column;
   }
   .h1-photo {
-    letter-spacing: 5px;
     padding: 0 25px;
     width: auto;
-    height: 10vh;
+    height: 20vh;
     z-index: 5;
   }
   .h1-photo:nth-child(1) {
@@ -655,7 +657,7 @@ footer {
   .h1-photo:nth-child(2) {
     right: auto;
     left: 0;
-    top: 85vh;
+    top: 75vh;
   }
   .h1-photo:nth-child(1) h1 {
     color: white;
@@ -664,7 +666,7 @@ footer {
     color: black;
   }
   .h1-photo h1 {
-    font-size: 40px;
+    font-size: 80px;
   }
   #romb {
     width: 260px;
@@ -699,14 +701,24 @@ footer {
     flex-direction: column;
   }
   .h1-photo {
-    letter-spacing: 5px;
-    padding: 0 5px;
+    padding: 0 10px;
     width: auto;
-    height: 10vh;
+    height: 15vh;
     z-index: 5;
   }
+  .h1-photo:nth-child(1) {
+    left: auto;
+    right: 0;
+    justify-content: flex-end;
+    top: 5vh;
+  }
+  .h1-photo:nth-child(2) {
+    right: auto;
+    left: 0;
+    top: 80vh;
+  }
   .h1-photo h1 {
-    font-size: 20px;
+    font-size: 48px;
   }
   #romb {
     width: 160px;
@@ -738,7 +750,7 @@ footer {
     line-height: 20px;
   }
   #about-us-studio h1, #about-us-kindergarten h1 {
-    font-size: 24px;
+    font-size: 20px;
     padding: 50px;
   }
   .hamburger {
@@ -747,7 +759,7 @@ footer {
     margin-bottom: 6px;
   }
   #logo-portrait {
-    width: 120px;
+    /* width: 120px; */
     height: 60px;
   }
   .photos {
@@ -800,10 +812,13 @@ footer {
     margin-bottom: 5px;
   }
   #logo-portrait {
-    top: 3px;
-    left: 3px;
-    width: 80px;
+    /* top: 3px;
+    left: 3px; */
+    /* width: 80px; */
     height: 40px;
+  }
+  .h1-photo h1 {
+    font-size: 36px;
   }
 }
 
